<resources>
    <string name="app_name">Contacts And Weather</string>

    <!-- main activity -->
    <string name="image_contact_book_content_description">Contact book picture</string>
    <string name="weather_changing_animation">Weather changing animation</string>

    <!-- contacts toolbar and menu -->
    <string name="contacts_toolbar_title">Contacts</string>
    <string name="menu_item_contacts_add_contact_title">Add new contact</string>
    <string name="menu_item_contacts_quit_title">Quit application</string>

    <!-- button Panel -->
    <string name="button_panel_edit">edit</string>
    <string name="button_panel_delete">del</string>
    <string name="button_panel_add">add</string>
    <string name="button_panel_call">call</string>

    <!-- contact info, edit contact -->
    <string name="label_first_name">first name:</string>
    <string name="label_second_name">second name:</string>
    <string name="label_patronymic">patronymic:</string>
    <string name="label_last_name">last name:</string>
    <string name="label_mobile_phone">mobile phone:</string>
    <string name="label_home_phone">home phone:</string>
    <string name="label_personal_website">personal website:</string>
    <string name="label_e_mail">e mail:</string>
    <string name="title_address">---Address---</string>
    <string name="label_flat">flat:</string>
    <string name="label_house">house:</string>
    <string name="label_street">street:</string>
    <string name="label_city">city:</string>
    <string name="label_state">state:</string>
    <string name="label_country">country:</string>
    <string name="label_post_code">post code:</string>

    <string name="hint_first_name">first name</string>
    <string name="hint_second_name">second name</string>
    <string name="hint_patronymic">patronymic</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_mobile_phone">mobile phone</string>
    <string name="hint_home_phone">home phone</string>
    <string name="hint_personal_website">personal website</string>
    <string name="hint_e_mail">e mail</string>
    <string name="hint_flat">flat</string>
    <string name="hint_house">house</string>
    <string name="hint_street">street</string>
    <string name="hint_city">city</string>
    <string name="hint_state">state</string>
    <string name="hint_country">country</string>
    <string name="hint_post_code">post code</string>

    <!-- edit contact -->
    <string name="edit_button_clear_text">clear</string>
    <string name="edit_button_close_text">close</string>
    <string name="edit_button_save_contact_text">save</string>
    <string name="edit_button_ok_text">@android:string/ok</string>

    <!-- dialog delete contact -->
    <string name="dialog_delete_button_positive">yes</string>
    <string name="dialog_delete_button_negative">no</string>
    <string name="dialog_title_text">Caution!</string>
    <string name="dialog_message">Delete\n%1$s ?</string>

    <!-- contact toast message -->
    <string name="no_selected_contact">No selected contact</string>
    <string name="no_phone_number">No phone number</string>
    <string name="phone_number_is_not_correct">Phone number is not correct</string>
    <string name="contact_is_delete">Contact is delete</string>
    <string name="nothing_is_delete">Nothing is delete</string>
    <string name="contact_is_saved">Contact is saved</string>
    <string name="contact_is_added">Contact is added</string>

    <!-- labels forecast -->
    <string name="label_forecast_temperature">Temperature:</string>
    <string name="label_forecast_heat">Feels like:</string>
    <string name="label_forecast_cloudiness">Cloudiness:</string>
    <string name="label_forecast_precipitation">Precipitation:</string>
    <string name="label_forecast_wind">Wind:</string>
    <string name="label_forecast_pressure">Pressure:</string>
    <string name="label_forecast_relative_wet">Relative wet:</string>

    <!--  weather forecast activity -->
    <string name="text_meteoservice_ru">Provided by Meteoservice.ru\nhttps://www.meteoservice.ru</string>
    <string name="loading">Loading&#8230;</string>

    <!--  weather forecast toolbar and menu -->
    <string name="weather_forecast_toolbar_title">Weather</string>
    <string name="menu_item_update_forecast">Update</string>
    <string name="empty_string" translatable="false"> </string>

</resources>
