<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_forecast_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/size_small"
    android:layout_marginRight="@dimen/size_small"
    card_view:cardBackgroundColor="@color/weatherForecastPrimaryBackground"
    card_view:cardCornerRadius="@dimen/size_small"
    card_view:cardElevation="@dimen/size_small">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:id="@+id/forecast_date_value"
            style="@style/style_forecast_date_time_text"
            android:gravity="center" />
        <TextView android:id="@+id/forecast_weekday_value"
            style="@style/style_forecast_date_time_text"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="@integer/weight_sum_100">
            <TextView android:id="@+id/forecast_tod_value"
                style="@style/style_forecast_date_time_text"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/size_medium"
                android:layout_weight="@integer/forecast_item_left_column_horizontal_weight"/>
            <TextView android:id="@+id/forecast_time_value"
                style="@style/style_forecast_date_time_text"
                android:gravity="center_vertical|end"
                android:paddingRight="@dimen/size_medium"
                android:layout_weight="@integer/forecast_item_right_column_horizontal_weight"/>
        </LinearLayout>
        <TextView android:id="@+id/forecast_temperature_label"
            style="@style/style_forecast_label_text.secondary"
            android:text="@string/label_forecast_temperature"/>
        <TextView android:id="@+id/forecast_temperature_value"
            style="@style/style_forecast_value_text.secondary"/>

        <TextView android:id="@+id/forecast_heat_label"
            style="@style/style_forecast_label_text.primary"
            android:text="@string/label_forecast_heat"/>
        <TextView android:id="@+id/forecast_heat_value"
            style="@style/style_forecast_value_text.primary"/>

        <TextView android:id="@+id/forecast_cloudiness_label"
            style="@style/style_forecast_label_text.secondary"
            android:text="@string/label_forecast_cloudiness"/>
        <TextView android:id="@+id/forecast_cloudiness_value"
            style="@style/style_forecast_value_text.secondary"
            />

        <TextView android:id="@+id/forecast_precipitation_label"
            style="@style/style_forecast_label_text.primary"
            android:text="@string/label_forecast_precipitation"/>
        <TextView android:id="@+id/forecast_precipitation_value"
            style="@style/style_forecast_value_text.primary"/>

        <TextView android:id="@+id/forecast_wind_label"
            style="@style/style_forecast_label_text.secondary"
            android:text="@string/label_forecast_wind"/>
        <TextView android:id="@+id/forecast_wind_value"
            style="@style/style_forecast_value_text.secondary"
            />

        <TextView android:id="@+id/forecast_pressure_label"
            style="@style/style_forecast_label_text.primary"
            android:text="@string/label_forecast_pressure"/>
        <TextView android:id="@+id/forecast_pressure_value"
            style="@style/style_forecast_value_text.primary"/>

        <TextView android:id="@+id/forecast_relative_wet_label"
            style="@style/style_forecast_label_text.secondary"
            android:text="@string/label_forecast_relative_wet"/>
        <TextView android:id="@+id/forecast_relative_wet_value"
            style="@style/style_forecast_value_text.secondary"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>